Debug/syntax_expr_test/47.out
syntax_expr_test\47.in(1) Fatal: Syntax error, "]" expected but "[" found
