Debug/syntax_expr_test/47.comp
syntax_expr_test\47.in(1) Error: Identifier not found "a"
